# exception_capturer

./: README.md  exception_capturer.py  pyproject.toml
tests/: test_exception_capturer.py
